# hashcracker

./: Cargo.toml  LICENSE  README.md
doc/: ARCHITECTURE.md  hashcracker.1
examples/: check_int64.rs
src/: apr1_crack.wgsl  apr1_mask.wgsl  apr1_wordlist.wgsl  bcrypt_crack.wgsl  bcrypt_mask.wgsl  bcrypt_wordlist.wgsl  db2_crack.wgsl  db2_mask.wgsl  db2_wordlist.wgsl  drupal7_crack.wgsl  drupal7_mask.wgsl  drupal7_wordlist.wgsl  filter.rs  gpu.rs  hash_backend.rs  hmac_sha1_crack.wgsl  hmac_sha1_mask.wgsl  hmac_sha1_wordlist.wgsl  hmac_sha256_crack.wgsl  hmac_sha256_mask.wgsl  hmac_sha256_wordlist.wgsl  hmac_sha512_crack.wgsl  hmac_sha512_mask.wgsl  hmac_sha512_wordlist.wgsl  main.rs  markov.rs  md4_crack.wgsl  md4_mask.wgsl  md4_wordlist.wgsl  md5_crack.wgsl  md5_mask.wgsl  md5_wordlist.wgsl  md5crypt_crack.wgsl  md5crypt_mask.wgsl  md5crypt_wordlist.wgsl  mssql05_crack.wgsl  mssql05_mask.wgsl  mssql05_wordlist.wgsl  mssql12_crack.wgsl  mssql12_mask.wgsl  (+48 more)
src/app/: attack.rs  benchmark.rs  cpu_pipeline.rs  extraction.rs  helpers.rs  mod.rs  stdout.rs
src/cli/: args.rs  mod.rs  output.rs  tui.rs
src/hashes/: mod.rs  raw_7z.rs  raw_apr1.rs  raw_bcrypt.rs  raw_crc32.rs  raw_db2.rs  raw_dcc.rs  raw_dcc2.rs  raw_drupal7.rs  raw_grub2.rs  raw_hmac_sha1.rs  raw_hmac_sha256.rs  raw_hmac_sha512.rs  raw_keepass.rs  raw_lm.rs  raw_md4.rs  raw_md5.rs  (+24 more)
test/: hashlist_md5.txt  hashlist_sha1.txt  hashlist_sha256.txt  wordlist.txt
tests/: hashes_md5.txt  hashes_mixed.txt  hashes_ntlm.txt  hashes_sha1.txt  hashes_sha256.txt  hashes_sha512.txt  integration.rs  wordlist.txt
(+4 files in other folders)
