[package]
name = "hashcracker"
version = "1.1.3"
edition = "2021"
description = "GPU-accelerated password cracker — 42 hash types, Vulkan/Metal/DX12, single binary"
homepage = "https://github.com/anomalyco/hashcracker"
repository = "https://github.com/anomalyco/hashcracker"
documentation = "https://docs.rs/hashcracker"
license = "MIT"
keywords = ["password-cracker", "hashcat", "gpu", "vulkan", "security"]
categories = ["command-line-utilities", "cryptography"]
readme = "README.md"


[dependencies]
wgpu = "29"
owo-colors = "4"
ratatui = "0.30"
tui-popup = "0.7"

crossterm = "0.29"
bytemuck = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
hex = "0.4"
sha2 = "0.10"
sha-1 = "0.10"
md-5 = "0.10"
md4 = "0.11"
pollster = "0.4"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indicatif = "0.17"
bcrypt = "0.16"
ctrlc = "3.4"
aes = "0.9.1"
cbc = "0.1"
ctr = "0.9"
cipher = "0.5.2"
cipher_0_4 = { package = "cipher", version = "0.4" }
generic-array = "0.14"
des = "0.8"
crc = "3.2"
hmac = "0.12"

[dev-dependencies]
blowfish = "0.10.0"
tempfile = "3"
